enhance and fixed any bug
