# api/initialized.go
@@ -22,8 +22,8 @@ import (
 // @Success 200 {object} types.InitializedType
 // @Failure 400 {object} gin.H
 // @Failure 500 {object} gin.H
-// @Router /v1/initialize [get]
-func (ctl *controller) getInitialize(c *gin.Context) {
+// @Router /api/initialize [get]
+func (ctl *authController) getInitialize(c *gin.Context) {
 	secret := utils.SecretGenerator(32)
 
 	iniObj := types.InitializedType{
@@ -37,4 +37,43 @@ func (ctl *controller) getInitialize(c *gin.Context) {
 		config.AppLog.Error().Msg(msg)
 	}
 	c.JSON(http.StatusOK, iniObj)
+}
+
+// Headers godoc
+// @Summary Exist initialize secret
+// @Description Exist initialize secret
+// @ID is-exist-initialize-secret
+// @Accept   json
+// @Tags	Authentication
+// @Produce  json
+// @Param params body types.InitializedType true "Parameters"
+// @Success 200 {string} string "found"
+// @Failure 400 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /api/is-exist-initialize-secret [post]
+func (ctl *authController) isExistInitializeSecret(c *gin.Context) {
+	clientIp := c.ClientIP()
+
+	var initialized types.InitializedType
+	if err := c.ShouldBind(&initialized); err != nil {
+		msg := fmt.Sprintf("%s bind an interface failed", clientIp)
+		config.AppLog.Error().Msg(msg)
+		c.JSON(http.StatusBadRequest, gin.H{
+			"msg": msg,
+		})
+		return
+	}
+
+	// Get init session by secret
+	var initSession types.InitializedType
+	err := utils.CacheGet(constants.SESSION_INITIALIZE, initialized.Secret, &initSession)
+	if err != nil {
+		msg := "not found initial secret"
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"msg": msg,
+		})
+		return
+	}
+
+	c.String(http.StatusOK, "found")
 }
